--- a/day3Js/styles.css
+++ b/day3Js/styles.css
@@ -16,8 +16,17 @@ body{
 header{
     width: 100%;
     padding: 10px;
-    background-color: rgb(1, 1, 18);
+    background-color: rgb(205, 205, 208);
 }
+
+header button{
+    padding: 5px;
+    background: #333;
+    color: white;
+    border:none;
+    outline: none;
+}
+
 nav{
     padding: 10px;
     height: 100%;
