--- a/day4js/syles.css
+++ b/day4js/syles.css
@@ -9,13 +9,15 @@
     gap: 2px;
     align-items: center;
     justify-content: center;
-    background-color: #f5f5f5;
+    background-color: #d4d2d2;
     line-height: 1.5;
     font-family: Arial, Helvetica, sans-serif;
+    height: 100vh;
+    width:100%;
  }
 
  nav{
-    width: 10%;
+    width: 15%;
     height: 100vh;
     display:flex;
     justify-content: center;
@@ -36,15 +38,14 @@
  }
 
  section{
-   display:none;
-   width:90%;
+   display: none;
+   width:85%;
    height:100vh;
-   background-color:#f2f2f2;
    overflow-y: auto;
  }
 
  section.active{
-   display:block;
+   display: block;
  }
 
  header{
@@ -52,7 +53,13 @@
    background-color: rgb(2, 2, 31);
    color: white;
    padding: 10px;
-   position: fixed;
+   display: flex;
+   position: sticky;
+    align-items: center;
+   justify-content: space-between;
+   position: sticky;
+   top: 0;
+   z-index: 2;
  }
 
  nav ul li{
@@ -60,18 +67,77 @@
    /* background-color: green; */
  }
 
- .product-list{
-   display:grid;
-   grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
-   gap: 5px;
+ /* toggle-switch */
+
+ .toggle-switch{
+  width: 70px;
+  height: 35px;
+  position: relative;
+  display: inline-block;
  }
 
- .productCard{
-   background-color: white;
-   color: black;
-   border-radius: 5px;
-   padding: 10px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
+ .toggle-switch input{
+  opacity: 0;
+  height: 0;
+  width: 0;
+ }
+
+ .slider{
+   position: absolute;
+   left: 0;
+   top: 0;
+   bottom: 0;
+   right: 0;
+   height:35px;
+   width: 100%;
+   background-color: rgb(226, 223, 223);
+   border-radius: 34px;
+   transition: 0.4s background-color ease;
+ }
+
+ .slider::before{
+   position: absolute;
+   content: '';
+   height: 27px;
+   width: 27px;
+   border-radius: 50%;
+   transition: 0.4s transform ease;
+   left: 4px;
+   bottom: 4px;
+   background-color: rgb(33, 34, 34);
+ }
+
+ .toggle-switch input:checked + .slider{
+    background-color: rgb(54, 54, 55);
+ }
+
+ .toggle-switch input:checked + .slider::before{
+    transform: translateX(35px);
+    background-color: rgb(165, 114, 3);
+ }
+
+ body.dark-mode{
+  background-color: rgb(52, 52, 53);
+  color: white;
+ }
+
+ body.light-mode{
+  background-color: white;
+  color: black;
+ }
+
+ .product-list .productCard{
+  background-color: #ffffff;
+  color: black;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 2px 0 2px rgba(0, 0, 0, 0.1);
+ }
+
+ .product-list{
+  /* background-color: red; */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  padding: 10px;
+  gap: 5px;
  }
